* Ensure Fuse.Dom.NodeList methods return Fuse.Dom.NodeList instead of Fuse.Array instances where necessary. [jddalton]

* Update vendor repos and modify the NWMatcher adapter to use variable references for the NW.Dom.select() and NW.Dom.match() methods. [Diego Perini, jddalton]

* Optimize Fuse.Enumerable.eachSlice() by avoiding a call to map() if no callback is provided. [Prototype LH #796] [Joran Greef]

* Rename Fuse.Class.Methods.addMethods to `extend`. [jddalton]
  Note: extend() may be invoked in one of the following ways:
   - MyClass.extend(plugins)
   - MyClass.extend(statics, plugins)
   - MyClass.extend(statics, plugins, mixins)

* Convert Element#inspect to Fuse.Dom.Element#inspect. [jddalton]

* Revert Fuse.Enumerable to a mixin and remove it as a dependency for Fuse.Range. [jddalton]

* After further study change `1 * n` back to to `+n` for quick numeric conversions. [Kean Tan]

* Ensure Fuse.RegExp's \s fix is done in a non-capturing group. [jddalton]

* Fix typo in STRING_REPLACE_COERCE_FUNCTION_TO_STRING bug test key. [jddalton, kangax]

* Stop Opera 9.25 Fuse.Array#slice from clipping results when the end index falls on an undefined index. [jddalton]

* Remove support for Fuse.Function#argumentNames. [jddalton]
  Note: Backwards compatibility warning.

* Switch to element decorator patterns instead of extending the native dom elements. [FuseJS LH #29] [jddalton]
  Note: Backwards compatibility warning.
    - Reorganized event.js
    - Remove unused functionality from unittest.js
    - Convert some unit tests to use the new element decorators

* Add support for inspecting Fuse's Array, Element, Event, Enumerable, Hash, and String plugin properties. [Prototype LH #787] [jddalton, jedediah]

* Add support for the W3C ElementTraversal interface in traversal.js. [jddalton, Diego Perini]

* Ensure Element#getStyle checks isNull() before other calculations. [jddalton]
