@@ -1,3 +1,5 @@
+* Make Fuse.Dom.Node() pass to Fuse.Dom.Element.decorate() if the nodeType is equal to 1. [jddalton]
+
 * Ensure Fuse.Dom.NodeList methods return Fuse.Dom.NodeList instead of Fuse.Array instances where necessary. [jddalton]
 
 * Update vendor repos and modify the NWMatcher adapter to use variable references for the NW.Dom.select() and NW.Dom.match() methods. [Diego Perini, jddalton]
